discussion/kv_engine/155176/155176_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Don't use the bucket logger from executor

Remove the binding to the bucket logger from the executor as it
is running in the core.

Change-Id: I984ef9374fb46ea181c38eec01698b82587c5f60

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 20:52:29.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 21:42:46.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9617/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9617/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10:
error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9617/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36574/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36574/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11193/ : FAILURE

Compile error at [2021-06-08T21:19:26.255Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11193/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11342/ : FAILURE

Compile error at [2021-06-08T21:10:58.309Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11342/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8215/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/160/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31253/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10264/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11613/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19196/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
